feat(frontend): migrate to React, add Demo Mode & wave logo
- Replaced Vue 3 frontend entirely with React 19 + Vite + TailwindCSS
- Multi-turn chat UI with SSE streaming and [DONE] signal handling
- Auto Demo Mode: detects backend availability on load, falls back to
  simulated streaming with English mock content if offline
- Mode-aware suggestion cards that switch between Local RAG and Web modes
- Offline Sidebar: shows mock algorithm documents with preview when backend
  is offline; fixes loading-hang bug by adding try/catch/finally
- Custom SVG wave-circle brand icon applied to favicon, landing page, and
  AI chat avatar
- Fix: suggestion card clicks now pass query directly to handleSearch
  instead of relying on async setQuery + setTimeout
- Fix: isStreaming state now uses immutable spread updates (no direct mutation)
- Fix: Vite dev server proxy configured for localhost:48124 backend
- feat(backend): add KnowledgeController, sessionId-keyed CircuitManus cache
- fix(backend): SSE [DONE] termination signal; ReActAgent removes step prefix
- docs: rewrite root README.md and README.zh.md to reflect React migration,
  new endpoints, port changes (8124 local / 48124 docker), and Demo Mode
- chore: update page title from 'frontend' to 'Circuit Agent'